crates/toml_edit/tests/fixtures/invalid/string-no-quotes-constant-like.stderr
TOML parse error at line 1, column 7
  |
1 | value=trust
  |       ^
Invalid string
Expected `"`, `'`
